# django-mongo

src/: pyproject.toml
src/core/: settings.py  urls.py
src/myapp/: models.py  mongodb.py  serializers.py  urls.py  views.py
